# jekyll-to-hugo

./: Dockerfile  Makefile  config.yaml  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
.github/: deploy-docs.yaml
.github/workflows/: deploy-docs.yaml  docs-static.yml  docs.yaml
app/: config.py  utils.py
app/converter/: __init__.py  converter.py  regex_heuristics.py  wordpress_markdown.py
app/io/: writer.py
app/tests/: utils.py  utils_test.py
app/tests/converter/: wordpress_markdown_test.py
docs/: conf.py
